kubernetes/automation/04-postgress.stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: n7n-postgres-deployment
  namespace: automation
spec:
  replicas: 0
  selector:
    matchLabels:
      app: n8n-postgres
  template:
    metadata:
      labels:
        app: n8n-postgres
    spec:
      volumes:
        - name: n8n-postgres-storage
          persistentVolumeClaim:
            claimName: nfs-pvc-n8n
        - name: n8n-postgres-script
          configMap:
            name: n8n-postgres-script
      containers:
        - name: postgres
          image: postgres:11
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: n8n-postgres-storage
              subPath: database
            - mountPath: /docker-entrypoint-initdb.d
              name: n8n-postgres-script
              readOnly: true
