kubernetes/automation/10-n8n-worker.deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n-worker-deployment
  namespace: automation
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: n8n-worker
  template:
    metadata:
      labels:
        app: n8n-worker
    spec:
      containers:
        - name: n8n-worker
          image: docker.n8n.io/n8nio/n8n
          imagePullPolicy: IfNotPresent
          args: ["worker"]
          volumeMounts:
            - mountPath: /home/node/.n8n
              name: n8n-storage
              subPath: n8n
      volumes:
        - name: n8n-storage
          persistentVolumeClaim:
            claimName: nfs-pvc-n8n
