kubernetes/automation/16-selenium-firefox.deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-node-firefox
  namespace: automation
  labels:
    app: selenium-node-firefox
spec:
  replicas: 2
  selector:
    matchLabels:
      app: selenium-node-firefox
  template:
    metadata:
      labels:
        app: selenium-node-firefox
    spec:
      containers:
        - name: selenium-node-firefox
          image: seleniarm/node-firefox
          ports:
            - containerPort: 5555
          resources:
            limits:
              memory: "1000Mi"
              cpu: ".5"
