kubernetes/automation/05-postgres.service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: n8n-postgres-service
  namespace: automation
spec:
  selector:
    app: n8n-postgres
  ports:
    - port: 5432
      targetPort: 5432
