kubernetes/automation/15-selenium-hub.service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: selenium-hub
  namespace: automation
  labels:
    app: selenium-hub
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.179.103
spec:
  ports:
    - port: 4444
      targetPort: 4444
      name: port0
    - port: 4443
      targetPort: 4443
      name: port1
    - port: 4442
      targetPort: 4442
      name: port2
  selector:
    app: selenium-hub
  type: LoadBalancer
  sessionAffinity: None
